--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
     </style>
-    <title>kossevector</title>
+    <title>Marcos Peoples Draft</title>
   </head>
   <body>
     <div id="root"></div>
