--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
-    </style>
-    <title>Marcos Peoples Draft</title>
+    <meta
+      name="description"
+      content="Interactive memorial for Marcos Peebles (1972-2025). Share memories, photos, and stories."
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Marcos Peebles Memorial</title>
   </head>
   <body>
     <div id="root"></div>
